--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
 	color: white;
 	background-color: black;
+	font-size: 150%;
+    font-family: 'Satisfy', cursive;
+    margin: 5em 25%;
 }
 
 h1 {
 	background-color: green;
-	width: 500px;
 	border: 4px solid black;
 	padding: 10px 20px;
 }
