--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@ body {
 	background-color: black;
 	font-size: 150%;
     font-family: 'Satisfy', cursive;
-    margin: 5em 25%;
+	margin: 5em 25%;
+	text-align: center;
 }
 
 h1 {
 	background-color: green;
 	border: 4px solid black;
 	padding: 10px 20px;
+	text-align: center;
 }
